--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "5.8.10",
+    "eslint-config-prettier": "7.1.0",
+    "eslint-plugin-prettier": "3.3.0",
+    "prettier": "2.2.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "1.9.0",
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "2.16.1",
+    "react-native-svg": "12.1.0",
     "styled-components": "5.2.1"
   },
   "devDependencies": {
@@ -32,6 +36,7 @@
     "eslint": "7.16.0",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.64.0",
+    "react-native-svg-transformer": "0.14.3",
     "react-test-renderer": "16.13.1",
     "typescript": "4.1.3"
   },
