--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-prettier": "3.3.0",
     "graphql": "15.4.0",
+    "moment": "2.29.1",
     "prettier": "2.2.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-geolocation-service": "5.1.1",
     "react-native-gesture-handler": "1.9.0",
     "react-native-modal": "11.6.1",
+    "react-native-nmap": "0.0.56",
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "2.16.1",
