--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.3.6",
+    "@bam.tech/react-native-make": "3.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "5.8.10",
@@ -29,6 +30,7 @@
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "2.16.1",
+    "react-native-splash-screen": "3.2.0",
     "react-native-svg": "12.1.0",
     "styled-components": "5.2.1"
   },
