--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-native-screens": "2.16.1",
     "react-native-splash-screen": "3.2.0",
     "react-native-svg": "12.1.0",
-    "styled-components": "5.2.1"
+    "react-native-swiper": "1.6.0",
+    "styled-components": "5.2.1",
+    "swiper": "6.4.5"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
