--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "2.16.1",
+    "react-native-sectioned-multi-select": "0.8.1",
     "react-native-splash-screen": "3.2.0",
     "react-native-svg": "12.1.0",
     "react-native-swiper": "1.6.0",
+    "react-native-vector-icons": "8.0.0",
     "styled-components": "5.2.1",
     "swiper": "6.4.5"
   },
@@ -42,6 +44,7 @@
     "@react-native-community/eslint-config": "2.0.0",
     "@types/react": "17.0.0",
     "@types/react-native": "0.63.42",
+    "@types/react-native-vector-icons": "6.4.6",
     "@types/styled-components": "5.1.7",
     "babel-jest": "26.6.3",
     "babel-plugin-root-import": "6.6.0",
