--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -28,3 +28,8 @@ android.enableJetifier=true
 FLIPPER_VERSION=0.54.0
 # gradle maemon
 org.gradle.daemon=true
+
+MYAPP_UPLOAD_STORE_FILE=contestboxkey.keystore
+MYAPP_UPLOAD_KEY_ALIAS=contestboxkey
+MYAPP_UPLOAD_STORE_PASSWORD=qwqw1212!
+MYAPP_UPLOAD_KEY_PASSWORD=qwqw1212!
