--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
         run: |
           npm install
       - name: Make gradlew executable
-        run: chmod +x ./gradlew
+        run: chmod +x gradlew
       - name: Build Android Release
         run: |
           cd android && ./gradlew assembleRelease
