--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
       - name: Build Android Release
         run: |
           cd android && ./gradlew assembleRelease
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
