--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,11 +11,11 @@ jobs:
       - name: Install npm dependencies
         run: |
           npm install
+      - name: Make gradlew executable
+        run: cd android && chmod +x ./gradlew
       - name: Build Android Release
         run: |
           cd android && ./gradlew assembleRelease
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
