--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         run: cd android && chmod +x ./gradlew
       - name: Build Android Release
         run: |
-          cd android && ./gradlew assembleRelease
+          cd android && ./gradlew app:assembleRelease
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
