--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "5.8.10",
     "@react-navigation/stack": "5.12.8",
+    "apollo-link-error": "1.1.13",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-prettier": "3.3.0",
     "graphql": "15.4.0",
