--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "3.3.6",
     "@bam.tech/react-native-make": "3.0.0",
+    "@react-native-async-storage/async-storage": "1.13.4",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "5.8.10",
