--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "5.8.10",
     "@react-navigation/stack": "5.12.8",
+    "@types/react-redux": "7.1.16",
     "apollo-link-error": "1.1.13",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-prettier": "3.3.0",
@@ -35,6 +36,8 @@
     "react-native-splash-screen": "3.2.0",
     "react-native-svg": "12.1.0",
     "react-native-swiper": "1.6.0",
+    "react-redux": "7.2.2",
+    "redux": "4.0.5",
     "styled-components": "5.2.1",
     "swiper": "6.4.5"
   },
