--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme">
       <meta-data
-            android:name="com.naver.maps.map.CLIENT_ID"
-            android:value="nan8o6kygd" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA1gJmS-QaqfmyUQdx0hmpEt7yGP0etZ_M" />
+      <uses-library android:name="org.apache.http.legacy" android:required="false"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
