--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,8 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 29
         targetSdkVersion = 29
+        playServicesVersion = "17.0.0"
+        googlePlayServicesVersion = "17.0.0"
     }
     repositories {
         google()
@@ -33,8 +35,5 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
-        maven {
-            url 'https://naver.jfrog.io/artifactory/maven/'
-        }
     }
 }
