--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "react-native": "0.63.4",
     "react-native-geolocation-service": "5.1.1",
     "react-native-gesture-handler": "1.9.0",
+    "react-native-maps": "0.27.1",
     "react-native-modal": "11.6.1",
-    "react-native-nmap": "0.0.56",
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "2.16.1",
