--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "2.2.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-error-boundary": "1.1.7",
     "react-native-geolocation-service": "5.1.1",
     "react-native-gesture-handler": "1.9.0",
     "react-native-maps": "0.27.1",
