--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-gesture-handler": "1.9.0",
     "react-native-image-zoom-viewer": "3.0.1",
     "react-native-linear-gradient": "2.5.6",
+    "react-native-mail": "6.1.0",
     "react-native-maps": "0.27.1",
     "react-native-markdown-display": "7.0.0-alpha.2",
     "react-native-modal": "11.6.1",
