--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@apollo/client": "3.3.6",
     "@bam.tech/react-native-make": "3.0.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "12.1.0",
+    "@react-native-firebase/auth": "12.1.0",
+    "@react-native-google-signin/google-signin": "6.0.0",
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "5.8.10",
     "@react-navigation/stack": "5.12.8",
